# qrcode-reader-opencv

./: README.md  pyproject.toml
app/: main.py  screen_capture.py
