[tool.poetry]
name = "qrcode"
version = "0.1.0"
description = ""
authors = ["Marcio Alves da Costa <marciockalves@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.10.0.84"
pyscreenshot = "^3.1"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
